<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.khaddobondhu.ui.home.HomeCategoriesFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.example.khaddobondhu.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.khaddobondhu.ui.explore.ExploreFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/navigation_create_post"
        android:name="com.example.khaddobondhu.ui.createpost.CreatePostFragment"
        android:label="@string/app_name" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.khaddobondhu.ui.profile.ProfileFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.khaddobondhu.ui.auth.LoginFragment"
        android:label="@string/login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.khaddobondhu.ui.auth.RegisterFragment"
        android:label="@string/register" />

    <fragment
        android:id="@+id/navigation_food_detail"
        android:name="com.example.khaddobondhu.ui.fooddetail.FoodDetailFragment"
        android:label="Food Detail">
        <argument
            android:name="foodId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.khaddobondhu.ui.cart.CartFragment"
        android:label="@string/cart" />

</navigation> 